<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gamers.ba</string>
    <string name="action_settings">Opcije</string>
    <string name="button_text">Home</string>
    <string name="button_text1">Refresh</string>

    <string name="hello_world">Login Screen</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="Login">Login</string>
    <string name="attempts">Pokusaji:</string>

</resources>
